--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -59,7 +59,6 @@
   --ffg_board_display_width: 1400px;
   --ffg_board_display_height: 1080px;
   
-    /* TODO JSA LATER : add a slider */
   --ffg_board_display_scale: 0.5;
   
   --ffg_container_width: 42px;
@@ -1092,6 +1091,38 @@
     top: 871px;
     width: 92px;
 }
+
+/* ---------------------------- ----------------------------   ---------------------------- */
+/* ---------------------------- OVERTIME Hours TOKENS          ---------------------------- */
+/* ---------------------------- ----------------------------   ---------------------------- */
+
+.ffg_overtime{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 940px;
+    cursor: pointer;
+    border-radius: 100%;
+}
+.ffg_overtime:hover{
+    outline: 3px solid green;
+}
+.ffg_overtime[data_index='1']{
+    left: 253px;
+}
+.ffg_overtime[data_index='2']{
+    left: 288px;
+}
+.ffg_overtime[data_index='3']{
+    left: 324px;
+}
+.ffg_overtime[data_index='4']{
+    left: 360px;
+}
+.ffg_overtime[data_index='5']{
+    left: 396px;
+}
+
 /* ---------------------------- ----------------------------   ---------------------------- */
 
 /** In this game, only one multipleChoice_dialog is used with YES/NO */
