--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -1127,7 +1127,14 @@
     cursor: pointer;
     border-radius: 100%;
 }
-.ffg_overtime:hover{
+.ffg_overtime.ffg_selectable{
+    cursor: pointer;
+}
+.ffg_overtime:not(.ffg_selectable){
+    cursor: initial;
+    outline: 3px dashed red;
+}
+.ffg_overtime.ffg_selectable:hover{
     /*outline: 3px solid green;*/
     background-image: url('img/board.jpg');
     background-size: calc(var(--ffg_board_display_width) / var(--ffg_board_display_img_width) );
@@ -1150,31 +1157,31 @@
 .ffg_overtime[data_index='1']{
     left: 253px;
 }
-.ffg_overtime[data_index='1']:hover{
+.ffg_overtime[data_index='1'].ffg_selectable:hover{
     left: 245px; /* IMITATION of scale:2 ,  with the background-image : left = left - (50-30)/2 */
 }
 .ffg_overtime[data_index='2']{
     left: 288px;
 }
-.ffg_overtime[data_index='2']:hover{
+.ffg_overtime[data_index='2'].ffg_selectable:hover{
     left: 278px;
 }
 .ffg_overtime[data_index='3']{
     left: 324px;
 }
-.ffg_overtime[data_index='3']:hover{
+.ffg_overtime[data_index='3'].ffg_selectable:hover{
     left: 314px;
 }
 .ffg_overtime[data_index='4']{
     left: 360px;
 }
-.ffg_overtime[data_index='4']:hover{
+.ffg_overtime[data_index='4'].ffg_selectable:hover{
     left: 350px;
 }
 .ffg_overtime[data_index='5']{
     left: 396px;
 }
-.ffg_overtime[data_index='5']:hover{
+.ffg_overtime[data_index='5'].ffg_selectable:hover{
     left: 386px;
 }
 
