--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -177,7 +177,7 @@
 .ffg_card[data_value='1']{ /** ACE */
     background-position-x: -500%;
 }
-.ffg_card[data_value='15']{ /** JOKER */
+.ffg_card[data_suit='5']{ /** JOKER */
     background-position-x: -600% !important;
     background-position-y: -100% !important;
 }
