[UI] Display other players boards !

--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -227,16 +227,13 @@
     background-repeat: no-repeat;
     width: var(--ffg_board_display_width);
     height: var(--ffg_board_display_height);
-}
-
-#ffg_board_current_player{
+    outline: 10px solid black;
+    border-radius: 20px;
     margin-left: 20px;
     margin-top: 10px;
     position: relative;
-    outline: 10px solid black;
-    border-radius: 20px;
 }
-#ffg_board_current_player_container{
+.ffg_board_container{
     transform: scale(var(--ffg_board_display_scale));
     transform-origin: top left;
     width: calc(var(--ffg_board_display_width) * var(--ffg_board_display_scale)  );
@@ -246,20 +243,20 @@
 
 
 /** Board Player NAMES*/
-.ffg_playerFaceUp_title { display:block; }
-.ffg_playerFaceUp_title h3{ 
+.ffg_board_title { display:block; }
+.ffg_board_title h3{ 
     text-align:center; 
     position:relative;
     /** Move the title to place it on the top border */
     top: -10px;
-    /*! margin-bottom: 10px; */
 }
-.ffg_playerFaceUp_title h3 span{
+.ffg_board_title h3 span{
     text-shadow: 1px 1px 1px black;
     border-radius: 20px;
     outline: 3px solid black;
     padding: 5px 15px;
     background-color: white;
+    cursor: default;
 }
 
 .ffg_container{
