--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -116,15 +116,18 @@
 
 .ffg_player_panel_details{
     text-align: center;
+    cursor: default;
 }
 
 
-.ffg_overtime_wrapper {
+.ffg_overtime_wrapper,
+.ffg_delivered_trucks_wrapper {
    padding: 5px;
    display: inline-block;
 }
 .ffg_player_panel_counter, 
-.ffg_icon_overtime{
+.ffg_icon_overtime,
+.ffg_icon_delivered_trucks{
     font-size: 1.5em;
     padding-left: 5px;
     vertical-align: middle;
