--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -141,6 +141,30 @@
 .ffg_icon_show_score .fa-star {
     top: 5px;
 }
+
+/* 
+---------------------------- ----------------------------   ---------------------------- 
+----------------------------  SHOW SCORE DIALOG             ---------------------------- 
+---------------------------- ----------------------------   ---------------------------- 
+*/
+
+#showScoreDialogContent table th {
+    border-right: 1px solid rgba(0,0,0,.2);
+    height: 70px;
+    min-width: 70px;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 30px;
+}
+#showScoreDialogContent table tbody tr td{
+    word-wrap: anywhere;
+    border-right: 1px solid rgba(0,0,0,.2);
+    font-family: Caveat;
+    font-size: x-large;
+    padding: 5px 8px;
+    text-align: center;
+    vertical-align: middle;
+}
 /* 
 ---------------------------- ----------------------------   ---------------------------- 
 ----------------------------  LEFT ZONE  : CARDS            ---------------------------- 
