--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -122,6 +122,7 @@
 
 .ffg_overtime_wrapper,
 .ffg_delivered_trucks_wrapper,
+.ffg_show_board,
 .ffg_show_score {
    padding: 5px;
    display: inline-block;
@@ -129,12 +130,14 @@
 .ffg_player_panel_counter, 
 .ffg_icon_overtime,
 .ffg_icon_delivered_trucks, 
+.ffg_icon_show_board,
 .ffg_icon_show_score{
     font-size: 1.5em;
     padding-left: 5px;
     vertical-align: middle;
     text-align: center;
 }
+.ffg_icon_show_board,
 .ffg_icon_show_score {
     cursor: pointer;
 }
@@ -150,6 +153,10 @@
 #popin_showScoreDialogId {
     border: 5px solid #6c2c12;
     background-image: linear-gradient(#fde391, rgb(231, 233, 232));
+}
+#popin_showBoardDialogId_title {
+    padding: 3px 90px;
+    text-align: center;
 }
 #ffg_showScoreDialogContent table th {
     border-right: 1px solid rgba(0,0,0,.2);
