[UI] Dark theme modal background
My eyes thank me after that !

--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -85,6 +85,9 @@
     /** overall-content is the BGA page  */
     background: #000000bf;
 }
+.ffg_theme_dark .standard_popin_underlay {
+    background: black;
+}
 /*
 ---------------------------------------------------------------------------------------
 --------------------------------------------------------------------------------------- 
