[UI] tooltip total score

--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -1251,6 +1251,9 @@
     font-style: italic;
     color: #6b2912;
 }
+.ffg_total_score:hover{
+    cursor: help;
+}
 /* ---------------------------- ----------------------------   ---------------------------- */
 /* List of symbols near trucks... */
 /* ---------------------------- ----------------------------   ---------------------------- */
