--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -324,7 +324,7 @@
 .ffg_card[data_value='1']{ /** ACE */
     background-position-x: -500%;
 }
-.ffg_card[data_suit='5']{ /** JOKER */
+.ffg_card[data_suit='5']:not(.ffg_card_back){ /** JOKER */
     background-position-x: -600% !important;
     background-position-y: -100% !important;
 }
