--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -104,6 +104,17 @@
 #ffg_round_label, #ffg_playerBoardSliderSize{
     margin: 0 10px;
 }
+#ffg_game_upper.ffg_fixed_page_title {
+    position: fixed;
+    top: 100px;
+    z-index: 5;
+    background: #6a6868b5; 
+    border-radius: 10%;
+    writing-mode: vertical-lr;
+    /* text-orientation: upright; */
+    text-orientation: initial;
+    left: 20px;
+}
 /*
 ---------------------------------------------------------------------------------------
 --------------------------------------------------------------------------------------- 
